# mini_project_instagram

./: .gitignore  pyproject.toml  test.sh
config/: settings.py  urls.py
member/: admin.py  forms.py  models.py  urls.py  views.py
member/migrations/: 0001_initial.py
post/: admin.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py
static/css/: style.css
templates/: base.html
templates/auth/: email_verified_done.html  login.html  not_verified.html  signup.html  signup_done.html
templates/include/: form.html
templates/post/: form.html  list.html
utils/: email.py  forms.py  models.py
