[tool.poetry]
name = "pystagram"
version = "0.1.0"
description = ""
authors = ["Di-Mo-De-OH <dhelahep0115@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
django-extensions = "^4.1"
ipython = "^9.11.0"
pillow = "^12.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.7"
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
